# glucocoach

./: .gitignore  README.md
api/: .DOCKERIGNORE  .env.example  CALCULATIONS.md  README.md  deploy.sh  docker-compose.yml  dockerfile  main.py  nginx.conf  pyproject.toml
api/.claude/: settings.local.json
api/core/: auth.py  config.py  dependencies.py  logger.py
api/db/: database.py
api/db/models/: __init__.py  basal_logs.py  bolus_log.py  cognitive_sessions.py  hypo_event.py  meal_log.py  summary.py  user.py
api/mock/: mocks.py
api/models/: glucose.py  user.py
api/routers/: auth.py  basal.py  bolus.py  dashboard.py  glucose.py  health.py  hypo.py  insight.py  meal.py  report.py
api/schemas/: basal.py  bolus.py  dashboard.py  glucose.py  hypo.py  insight.py  meal_log.py  report.py
api/services/: basal_service.py  bolus_service.py  glucose_service.py  hypo_service.py  insight_service.py  meal_service.py  report_service.py
api/utils/: glucose.py
design/: app.pen
mobile/: README.md  pubspec.yaml
mobile/.claude/: settings.local.json
mobile/android/app/: build.gradle.kts
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/core/: colors.dart  theme.dart
mobile/lib/models/: glucose_reading.dart
mobile/lib/screens/: ai_insights_screen.dart  home_screen.dart  hypo_tracker_screen.dart  (+9 more)
mobile/stitch_screens/: 01_register.html  02_login.html  03_home_dashboard.html  04_hypo_tracker.html  05_insulin_log.html  06_insights_reports.html  07_profile_settings.html
mobile/web/: index.html
(+27 files in other folders)
